--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Titme of original page</title>
 </head>
 <body>
-	
+	<table>
+		<tr>
+			<td>1_1</td>
+			<td>1_2</td>
+			<td>1_3</td>
+			<td>1_4</td>
+		</tr>
+	</table>
 </body>
 </html>
